--- a/docs/components/views/en/main.html
+++ b/docs/components/views/en/main.html
@@ -177,7 +177,7 @@
                     '           task: "",\n' +
                     '           todos: [ "Get Up", "Eat", "Code" ],\n' +
                     '           addTodo: function(){\n' +
-                    '               this.data.todos.push(task);\n' +
+                    '               this.data.todos.push(this.data.task);\n' +
                     '               this.data.task = "";\n' +
                     '          }\n' +
                     '       }\n' +
