--- a/docs/components/views/pt/main.html
+++ b/docs/components/views/pt/main.html
@@ -175,7 +175,7 @@
                 '           task: "",\n' +
                 '           todos: [ "Levantar", "Comer", "Programar" ],\n' +
                 '           addTodo: function(){\n' +
-                '               this.data.todos.push(task);\n' +
+                '               this.data.todos.push(this.data.task);\n' +
                 '               this.data.task = "";\n' +
                 '          }\n' +
                 '       }\n' +
