--- a/docs/components/views/tutorial.html
+++ b/docs/components/views/tutorial.html
@@ -108,6 +108,10 @@
                         <li><a mark="#method_tojsobj"> toJsObj </a></li>
                         <li><a mark="#method_watch"> watch </a></li>
                         <li><a mark="#method_set"> set </a></li>
+                        <li><a mark="#method_compile"> compile </a></li>
+                        <li><a mark="#method_toElement"> toElement </a></li>
+                        <li><a mark="#method_use"> use </a></li>
+                        <li><a mark="#method_call"> call </a></li>
                     </ul>
                 </li>
                 <li sec> <a i:href="/tutorial/comps_incs">
