--- a/docs/components/doc-sections/en/methods.html
+++ b/docs/components/doc-sections/en/methods.html
@@ -509,7 +509,7 @@
     </p>
     <ul>
         <li> <span class="note mark-el">{ Array } calls</span> &ndash; an array of functions that will be called. </li>
-        <li> <span class="note mark-el">{ Bollean } ignoreIfNull</span> &ndash; allows to ignore an item if it's null,
+        <li> <span class="note mark-el">{ Boolean } ignoreIfNull</span> &ndash; allows to ignore an item if it's null,
             otherwise, it throws a warning message. By default the value is <span class="mark-el">false</span>. </li>
     </ul>
 
