--- a/docs/components/doc-sections/pt/methods.html
+++ b/docs/components/doc-sections/pt/methods.html
@@ -489,7 +489,7 @@
     </p>
     <ul>
         <li> <span class="note mark-el">{ Array } calls</span> &ndash; uma array das funções the serão executadas. </li>
-        <li> <span class="note mark-el">{ Bollean } ignoreIfNull</span> &ndash; permite ignorar um item se estiver nulo,
+        <li> <span class="note mark-el">{ Boolean } ignoreIfNull</span> &ndash; permite ignorar um item se estiver nulo,
             senão, uma mensagem de aviso é lançada. Por padrão é tem como o valor <span class="mark-el">false</span>.
         </li>
     </ul>
