--- a/docs/components/views/tutorial.html
+++ b/docs/components/views/tutorial.html
@@ -38,6 +38,7 @@
                                 <li> <a mark="#prop_config"> Config Property </a> </li>
                                 <li> <a mark="#prop_data"> Data Property </a> </li>
                                 <li> <a mark="#prop_hooks"> Instance Hooks </a> </li>
+                                <li> <a mark="#prop_dependencies"> Dependencies </a> </li>
                             </ul>
                         </li>
                     </ul>
