--- a/docs/components/doc-sections/en/routing.html
+++ b/docs/components/doc-sections/en/routing.html
@@ -32,7 +32,7 @@
                     isDefault: Boolean,
                     isNotFound: Boolean,
                     children: Object,
-                    keepAlive: Boolean
+                    keepAlive: Boolean,
                 }
             }
         }
